# macro-monitoring

./: .gitignore  README.md  macro-bubble-monitor-spec.md  pyproject.toml
.github/workflows/: daily.yml
config/: episodes.yaml  registry.yaml  thresholds.yaml
data/raw/: baa10y.csv  bamlh0a0hym2.csv  bcnsdodns.csv  btcusd.csv  cfnai.csv  cmdebt.csv  cpilfesl.csv  dfii10.csv  drtscilm.csv  dtwexbgs.csv  dtwexm.csv  gdp.csv  jtsjol.csv  margin_debt.csv  ncbeilq027s.csv  payems.csv  ppiaco.csv  rrpontsyd.csv  rsp.csv  shiller_cape.csv  spx.csv  spy.csv  t10y2y.csv  t10y3m.csv  usrec.csv  vixcls.csv  walcl.csv  wtregen.csv
data/scores/: composite.csv  pillars.csv  stress.csv
data/snapshots/: episode_snapshots.csv
data/state/: freshness.json  sequence_state.json
episodes/: black1987.md  covid.md  dotcom.md  gfc.md  oil1973.md  postcovid.md  rec1990.md  volcker1980.md
pipeline/: __main__.py  alerts.py  backtest.py  cli.py  export.py  paths.py  registry.py  store.py
pipeline/compute/: analogs.py  derived.py  episodes.py  percentiles.py  scores.py  sequencer.py
pipeline/ingest/: __init__.py  fred.py  keyed.py  shiller.py  stooq.py  yahoo.py
scripts/: seed_spx_history.py  setup_repo.sh
site/: backtest.html  guide.html  index.html
site/assets/: app.js  (+2 more)
tests/: test_alerts.py  test_analogs.py  test_backtest.py  test_derived.py  test_episodes.py  test_episodes_lib.py  test_export.py  test_fred.py  test_ingest.py  test_keyed.py  test_percentiles.py  test_registry.py  test_scores.py  test_sequencer.py  test_shiller.py  test_stooq.py  test_store.py  test_yahoo.py
(+20 files in other folders)
