[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-monitor-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "requests>=2.32",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "markdown>=3.6",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["pipeline", "pipeline.ingest", "pipeline.compute"]

[tool.pytest.ini_options]
testpaths = ["tests"]
